fix icon alignment

--- a/frontend/src/styles/admin/SideNavbar.scss
+++ b/frontend/src/styles/admin/SideNavbar.scss
@@ -88,23 +88,27 @@
   color: #2e2c2c;
   display: block;
   font-size: 12px;
-  padding: 17px 10px;
+  padding: 12px 8px;
+  
 
   img {
     width: 24px;
     height: 24px;
-    margin-left: 8px;
+    margin-left: 0;
   }
 
   @media (min-width: 576px) { 
     font-size: 15px;
-    padding-left: 0px;
+    
   }
 
   // Medium devices (tablets, 768px and up)
   @media (min-width: 768px) { 
     font-size: 15px;
-    padding-left: 0px;
+    
+    img {
+      margin-left: 8px;
+    }
   }
 
 }
